2007-04-19  Jerome Guitton  <guitton@adacore.com>

	* ser-mingw.c (fd_is_file): New function.
	(file_select_thread): New function.
	(ser_console_wait_handle): Add special handling for files.

2007-04-18  Denis Pilat  <denis.pilat@st.com>

	* dwarf2read.c (read_subrange_type): Use DW_ATE_signed default type
	when missing from DW_TAG_subrange_type.  Remove the handling of null
	return from die_type.

2007-04-18  Maciej W. Rozycki  <macro@mips.com>

	* mips-tdep.c (mips_eabi_push_dummy_call): Revert the last
	change to rearrange some brackets.
	(mips_n32n64_push_dummy_call): Likewise.
	(mips_o32_push_dummy_call): Likewise.
	(mips_o64_push_dummy_call): Likewise.

2007-04-18  Denis Pilat  <denis.pilat@st.com>

	* infcmd.c (post_create_inferior): Start with a call to 
	target_terminal_ours.

2007-04-17  Maciej W. Rozycki  <macro@mips.com>

	* mips-tdep.c (mips_eabi_push_dummy_call): Rearrange some
	brackets.
	(mips_n32n64_push_dummy_call): Likewise.  Reformat some
	expressions.
	(mips_o32_push_dummy_call): Likewise.
	(mips_o64_push_dummy_call): Likewise.

2007-04-17  Maciej W. Rozycki  <macro@mips.com>

	* mips-tdep.c (mips_n32n64_push_dummy_call): Fix a typo in a
	comment.

2007-04-17  Maciej W. Rozycki  <macro@mips.com>

	* mips-tdep.c (mips_n32n64_push_dummy_call): Fix a typo in a
	comment.
	(mips_o32_push_dummy_call): Likewise.

2007-04-17  Andreas Schwab  <schwab@suse.de>

	* symtab.c (skip_prologue_using_sal): Allow the end of the prologue
	sal to be bigger than the end of the function.

2007-04-17  Maciej W. Rozycki  <macro@mips.com>
            Nigel Stephens  <nigel@mips.com>

	* mips-tdep.c (mips_o32_push_dummy_call): Take account of
	argument alignment requirements when calculating stack space
	required.  When aligning an arg register to eight bytes
	boundary, align stack_offset too.  Write floating-point
	arguments to the appropriate integer register if need go there.
	(mips_o64_push_dummy_call): Likewise.

2007-04-14  Ulrich Weigand  <uweigand@de.ibm.com>
